<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operations"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/math_resul"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ac"
                style="@style/ActionButtons"
                android:text="@string/ac" />

            <TextView
                android:id="@+id/left_square"
                style="@style/ActionButtons"
                android:text="@string/left_square" />

            <TextView
                android:id="@+id/right_square"
                style="@style/ActionButtons"
                android:text="@string/right_square" />

            <TextView
                android:id="@+id/percent"
                style="@style/ActionButtons"
                android:text="@string/percent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                style="@style/NumbersButtons"
                android:text="@string/seven"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/eight"
                style="@style/NumbersButtons"
                android:text="@string/eight"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/nine"
                style="@style/NumbersButtons"
                android:text="@string/nine"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/multiply"
                style="@style/ActionButtons"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                style="@style/NumbersButtons"
                android:text="@string/four"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/five"
                style="@style/NumbersButtons"
                android:text="@string/five"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/six"
                style="@style/NumbersButtons"
                android:text="@string/six"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/plus"
                style="@style/ActionButtons"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                style="@style/NumbersButtons"
                android:text="@string/one"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/two"
                style="@style/NumbersButtons"
                android:text="@string/two"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/three"
                style="@style/NumbersButtons"
                android:text="@string/three"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/minus"
                style="@style/ActionButtons"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dot"
                style="@style/NumbersButtons"
                android:text="@string/dot"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/zero"
                style="@style/NumbersButtons"
                android:text="@string/zero"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/back"
                style="@style/NumbersButtons"
                android:text="@string/back"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/equals"
                style="@style/ActionButtons"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>